<resources>
    <string name="app_name">Преступления</string>
    <string name="crime_title_hint">Напишите название преступления</string>
    <string name="crime_title_label">Название</string>
    <string name="crime_details_label">Детали</string>
    <string name="crime_solved_label">Решено</string>
    <string name="new_crime">Новое преступление</string>
    <string name="delete_crime">Удалить преступление</string>
    <string name="show_subtitle">Показать подзаголовок</string>
    <string name="hide_subtitle">Скрыть подзаголовок</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%d преступление</item>
        <item quantity="other">%d преступления</item>
        <item quantity="many">%d преступлений</item>
    </plurals>

    <string name="permission_message">Разрешение не было предоставлено</string>

    <string name="choose_button">Выберите виновного</string>
    <string name="send_report_button">Отправить сводку</string>

    <string name="crime_report">%1s!     Преступление было обнаружено %2s. %3s и %4s .</string>

    <string name="crime_report_solved">Оно было решено</string>
    <string name="crime_report_unsolved">Оно не было решено</string>
    <string name="crime_report_no_suspect">подозреваемых нет</string>
    <string name="crime_report_suspect">подозреваемым является %s</string>
    <string name="crime_report_subject">Криминал Сводка о преступлении</string>
    <string name="send_report">Отправить сводку с помощью…</string>
    <string name="dial_a_number">Позвонить </string>

    <string name="description_picture">Фото проишествия</string>
</resources>